MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with EditXT.  If not, see <http://www.gnu.org/licenses/>.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This file contains notable new features and other large changes. See
the source repository for the gory details of what actually happened.

? - 1.1.x
  - Display full path in window title and document tooltips.
  - Fix cursor column status view: left-most position is now 0 instead of 1.
  - Create new (empty) document when opening non-existent path from command
    line.
  - Always move (do not copy) document or project on internal drag.

2012-05-22 - 1.1.0
  - Added non-padded (un)comment text command. This is now the default comment
    mode (SHIFT+COMMA). Moved old command to SHIFT+COMMAND+COMMA.
  - Improve button text in find/replace dialog.
  - Fixed bug in backspace at end of line with trailing whitespace.
  - Fixed bug in document auto-reload which caused a prompt to "Save As..."
    on next save.
  - Fixed bug: crash on OS X Lion when collapsing project.
  - Fixed bug: crash on OS X Lion due to no current project in settings file on
    launch. 'NSNull' object has no attribute 'indexAtPosition_' in editor.py
    line 290, in get_current_project.
  - Internal: upgrade to PyObjC 2.3 and Python 2.7.3.
  - Internal: improve logging configuration.
  - Internal: major package reorganization.

2010-10-13 - 1.0.1 - Fixed undo and document pane hover bugs.

2010-08-16 - 1.0.0 - Added GPLv3 license and released on github.com

2007-12-29 - Initial development. During this period, as soon as it was
    functional enough for day-to-day use, EditXT was used as the primary
    editor with which to further develop itself. In addition to that,
    EditXT was also used on a daily basis for other software development.